src/css/style.css
:root {
  --main-color: #f9bf3b;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Roboto"; /* TODO: Temporary solution */
}

::selection {
  background-color: var(--main-color, #f9bf3b);
  color: #0f0b0b;
}

.container {
  position: relative;
  max-width: 1140px;
  margin: 0 auto;
}

/** Titles styles **/
.title {
  text-align: center;
  font-weight: 900;
  text-transform: uppercase;
}

.title_xl {
  color: #fff;
  font-size: 80px;
  line-height: 80px;
}

.title_colored {
  color: var(--main-color, #f9bf3b);
  font-size: 41px;
  line-height: 41px;
}

/** Buttons styles **/

.btn {
  min-width: 315px;
  min-height: 72px;
  display: block;
  margin: 0 auto;
  padding: 0 15px;
  border-radius: 4px;
  background: linear-gradient(0deg, #ff4d00 0%, #feb05d 100%);
  color: #fff;
  text-align: center;
  text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
  font-size: 21px;
  text-transform: uppercase;
  cursor: pointer;
}

/** Divider styles **/

.divider {
  margin: 14px auto 0 auto;
  width: 220px;
  height: 7px;
  background-color: var(--main-color, #f9bf3b);
}

/** Links styles **/

a {
  all: unset;
  text-decoration: none;
}

/** Promo section styles **/

.promo {
  min-height: 800px;
  background: url("../img/main_bg.jpg") center center / cover no-repeat;
  padding: 20px 0 50px 0;
  margin: 0 auto;

  .logo {
    .logo__img {
      display: block;
      margin: 0 auto;
    }

    .logo__descr {
      margin-top: 13px;
      text-align: center;
      font-size: 1rem;
      text-transform: uppercase;
      font-weight: 500;
      line-height: normal;
      color: #fff;
    }
  }

  h1 {
    margin-top: 52px;
  }

  h2 {
    margin-top: 12px;
  }

  .btn {
    margin-top: 75px;
  }

  .promo__text {
    margin-top: 20px;
    color: #fff;
    text-align: center;
    font-size: 21px;
    font-style: normal;
    font-weight: 500;
    line-height: 28px;
  }

  .promo__text span {
    text-transform: uppercase;
    color: var(--main-color, #f9bf3b);
  }

  .promo__scroll-text {
    margin-top: 75px;
    color: #fff;
    text-align: center;
    font-size: 0.9rem;
    text-transform: uppercase;
  }

  .promo__scroll-img {
    display: block;
    margin: 10px auto 0 auto;
  }
}

/** Intensive section styles **/

.intensive {
  padding: 80px 0;
  background-color: #efefef;

  .intensive__title {
    color: #252525;
    font-size: 30px;
    font-weight: 500;
  }

  .intensive__subtitle {
    margin-top: 15px;
    color: #4a4a4a;
    text-align: center;
    font-size: 23px;
    font-weight: 500;
    line-height: normal;
  }

  .intensive__wrapper {
    display: flex;
    flex-wrap: wrap;
    margin-top: 42px;
    justify-content: center;
    align-items: center;
    gap: 20px;
  }

  .intensive__item {
    .intensive__img {
      width: 100%;
    }

    .intensive__descr {
      margin-top: 15px;
      width: 360px;
      font-weight: 300;
      color: #494949;
      font-size: 16px;
      text-align: center;
      line-height: 21px;
    }
  }
}

/** Info section styles **/

.info {
  min-height: 564px; /* TODO: Temporary solution */
  padding: 100px 0 140px 0;
  background-color: #0f0b0b;

  .info__title {
    color: var(--main-color, #f9bf3b);
    font-size: 30px;
    text-align: right;
  }

  .info__img {
    position: absolute;
    top: 93px;
    left: -83px;
    z-index: 1;
  }

  .info__text {
    position: relative;
    margin-top: 20px;
    padding-left: 390px;
    color: #fff;
    text-align: right;
    font-size: 17px;
    font-weight: 300;
    z-index: 2;
    text-shadow: 2px 2px 10px var(--main-color,);
  }

  .info_text-medium {
    font-weight: 500;
  }
}

/** Skills section styles **/

.skills {
  padding: 80px 0 102px 0;
  background: url("../img/secondary_bg.jpg") center center / cover no-repeat;

  .skills__title {
    color: #efefef;
    font-size: 30px;
    font-weight: 400;
  }

  .skills__wrapper {
    display: flex;
    margin-top: 40px;
    justify-content: space-around;
  }

  .skills__item {
    width: 224px;
  }

  .skills__circle {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    width: 118px;
    height: 118px;
    background-color: #f9bf3b;
    border-radius: 100%;
  }

  .skills__descr {
    margin-top: 18px;
    text-align: center;
    color: #efefef;
    font-size: 16px;
    font-weight: 300;
  }
}

/** Bonus section styles **/

.bonus {
  padding: 80px 0 80px 0;
  .bonus__img {
    display: block;
    margin: 0 auto;
  }

  .bonus__descr {
    margin: 80px 10px 0 10px;
    font-weight: 500;
    color: #242424;
    font-size: 30px;
    text-align: center;
    line-height: 45px;
  }

  .bonus__btn {
    margin-top: 60px;
  }
}

/** Invite section styles **/

.invite {
  padding: 50px 0 50px 0;
  background-color: #0f0b0b;

  .invite__img {
    display: block;
    margin: 0 auto;
  }
  .invite__descr-big {
    margin-top: 40px;
    font-weight: 500;
    color: #ffffff;
    font-size: 30px;
    text-align: center;
    text-transform: uppercase;
  }
  .invite__time {
    margin-top: 20px;
    display: block;
    font-weight: 900;
    color: #f9bf3b;
    font-size: 36px;
    text-align: center;
    line-height: 36px;
    text-transform: uppercase;
  }
  .invite__descr-small {
    margin-top: 20px;
    font-weight: 500;
    color: #efefef;
    font-size: 23px;
    text-align: center;
  }
}

/** Contacts section styles **/

.contacts {
  padding: 60px 0 60px 0;
  background-color: #1a1a1a;
  text-align: center;
  font-weight: 100;
  color: #878787;
  font-size: 1.5rem;
  line-height: 40px;
  .links__wrapper {
    display: flex;
    justify-content: center;
    text-decoration: underline;

    span {
      font-size: 2rem;
      margin: 0px 10px;
    }
    .contacts__support {
      cursor: pointer;
    }

    .contacts__privacy {
      cursor: pointer;
    }
  }
  .contacts__call {
    cursor: pointer;
  }
}

